# minik8s-serverless

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: quality.yml  release-deb.yml  release-images.yml
api/: Cargo.toml
api/src/: eventsource.rs  function.rs  lib.rs  revision.rs
controller/: Cargo.toml
controller/src/: handlers.rs  http.rs  informer.rs  main.rs  python.rs  runtime.rs  scale.rs  state.rs  status.rs  workflow.rs
controller/src/eventing/: handlers.rs  mod.rs  source.rs
controller/src/serving/: handlers.rs  runtime.rs  runtime_pods.rs
crates/activator/: Cargo.toml
crates/activator/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: event.rs  eventtrigger.rs  lib.rs  service.rs  workflow.rs
crates/controller/: Cargo.toml
crates/controller/src/: main.rs  state.rs
crates/controller/src/eventing/: broker.rs
crates/controller/src/serving/: handlers.rs  mod.rs  runtime_pods.rs  scale.rs
crates/core/: Cargo.toml
crates/core/src/: handlers.rs  lib.rs  status.rs
crates/core/src/eventing/: handlers.rs
crates/core/src/serving/: handlers.rs  mod.rs  runtime.rs  runtime_pods.rs  scale.rs  workflow.rs
crates/kn/: Cargo.toml
crates/kn/src/: main.rs
crates/kn/src/runtime/: mod.rs  python.rs  rustlang.rs
crds/: eventtriggers.yaml  functions.yaml  revisions.yaml  serverlessservices.yaml  workflows.yaml
deploy/: serverless-controller.yaml  serverless-core.yaml  serverless-crds.yaml
docs/: test.md
examples/: event-source.yaml  function-concurrency.yaml  function-python.yaml  slow.py  workflow.yaml
examples/exp-sentiment/: sentiment.py  sentiment.yaml
examples/exp-ticket-support/: event-trigger.yaml  workflow.yaml
examples/exp-ticket-support/functions/: auto_reply.py  auto_reply.rs  human_escalate.py  human_escalate.rs  notify.py  notify.rs  risk_score.py  risk_score_v2.py  risk_score_v2.yaml  ticket_classify.py  ticket_classify.rs
kn/: Cargo.toml
kn/src/: main.rs
scripts/: build-controller-image.sh  build-core-image.sh
