[workspace]
members = [
    "crates/activator",
    "crates/api",
    "crates/controller",
    "crates/core",
    "crates/kn",
]
resolver = "2"

[workspace.dependencies]
api = { package = "api", git = "https://github.com/stevenissleepy/minik8s", tag = "v0.1.0" }
apimachinery = { git = "https://github.com/stevenissleepy/minik8s", tag = "v0.1.0" }
client-rs = { git = "https://github.com/stevenissleepy/minik8s", tag = "v0.1.0" }
logger = { git = "https://github.com/stevenissleepy/minik8s", tag = "v0.1.0" }
