[package]
name = "serverless-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
apimachinery = { workspace = true }
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
cron = "0.12"
client-rs = { workspace = true }
api = { workspace = true }
logger = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serverless-api = { path = "../api" }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
