[package]
name = "kn"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kn"
path = "src/main.rs"

[dependencies]
anyhow = "1"
apimachinery = { workspace = true }
clap = { version = "4", features = ["derive"] }
client-rs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serverless-api = { path = "../api" }
tokio = { version = "1", features = ["macros", "rt"] }
